--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/parameterManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/parameterManagement.html
@@ -5,10 +5,9 @@
     <title>Rudder - Parameters Management</title>
     <style type="text/css">
     .portlet-content{
-      padding:0 15px;
-    }
-    .inner-portlet{
-      padding-top: 2px;
+      float: left;
+      width: 100%;
+      padding:0 15px 15px 15px;
     }
     .btn.space-bottom{
       margin-bottom:15px;
@@ -55,7 +54,6 @@
         </div>
       </lift:authz>
     </div>
-    <hr class="spacer" />
     <lift:authz role="directive_write">
       <div id="globalParameterForm"></div>
     </lift:authz>
