--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/eventLogs.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/eventLogs.html
@@ -9,6 +9,10 @@
       #filterLogs{
         margin-bottom:12px;
       }
+      .btn.showParameters{
+        margin-bottom: 10px;
+        min-width: 195px;
+      }
     </style>
   </head>
 
