--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/Popup/expected_policy_popup.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/Popup/expected_policy_popup.html
@@ -25,7 +25,7 @@
                     </div>
                 <br/>
                 <div class="table-responsive space-bottom">
-                    <table id="pendingNodeConfirm" class="table table-bordered table-stripped table-hover">
+                    <table id="pendingNodeConfirm">
                       <thead>
                         <tr class="head">
                           <th>Node name</th>
