--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/Popup/accept_new_server.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/Popup/accept_new_server.html
@@ -23,7 +23,7 @@
                 </h4>
                 <div id="pendingNodeConfirm_paginate_area" class="nodisplay"></div>
                 <div class="table-responsive">
-                    <table id="pendingNodeConfirm" class="space-bottom table table-stripped table-hover">
+                    <table id="pendingNodeConfirm" class="space-bottom">
                       <thead>
                         <tr class="head">
                           <th>Node name</th>
