--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/policyServerManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/policyServerManagement.html
@@ -507,6 +507,127 @@
     </div>
 
     <div class="inner-portlet">
+      <h3 class="page-title">Policy Generation System Hooks</h3>
+      <div class="portlet-content">
+        <div class="lift:administration.PropertiesManagement.generationHookCfpromise" id="generationHookCfpromise">
+          <div class="col-xs-12 callout-fade callout-warning">
+            <div class="marker">
+              <span class="glyphicon glyphicon-info-sign"></span>
+            </div>
+            <h4>Development Policy Check</h4>
+            <p>Rudder can check generated policies syntax after generation to ensure that non syntactly valide policies are deployed on node.</p>
+            <p>
+              That check is especially useful when you are developing your own generic method or technique without the technique
+              editor, and you want to catch possible bugs as early as possible.
+            </p>
+            <p>
+              This check can add some overhead to policy generation, so if you don't code techniques or generic method,
+              you can disable it to make policy generation quicker.
+            </p>
+          </div>
+          <form class="lift:form.ajax">
+            <ul>
+              <li class="rudder-form">
+                <div class="input-group">
+                  <label class="input-group-addon" for="generationHookCfpromiseCheckbox">
+                    <input id="generationHookCfpromiseCheckbox" type="checkbox">
+                    <label for="generationHookCfpromiseCheckbox" class="label-radio">
+                      <span class="ion ion-checkmark-round"></span>
+                    </label>
+                    <span class="ion ion-checkmark-round check-icon"></span>
+                  </label>
+                  <label class="form-control" for="generationHookCfpromiseCheckbox">
+                    Enable syntax validation of generated policy
+                  </label>
+                </div>
+              </li>
+            </ul>
+            <lift:authz role="administration_write">
+              <input type="submit" value="Reload" id="generationHookCfpromiseSubmit"/>
+              <span class="lift:Msg?id=generationHookCfpromiseMsg">[messages]</span>
+            </lift:authz>
+          </form>
+        </div>
+        <br />
+        <div class="lift:administration.PropertiesManagement.generationHookTriggerNodeUpdate" id="generationHookTriggerNodeUpdate">
+          <div class="col-xs-12 callout-fade callout-warning">
+            <div class="marker">
+              <span class="glyphicon glyphicon-info-sign"></span>
+            </div>
+            <h4>Trigger immidiate update of nodes when their configuration changes</h4>
+            <p>When new policies are generated, you have to wait for the next scheduled run of a node to have it apply them.</p>
+            <p>
+              Depending of your use case, you may prefer to reduce latency between a node configuration change and its application on
+              the node. For that, Rudder can send an update notification at the end of a policy generation to all nodes whose configuration
+              was changed. That notification will tell the corresponding nodes to start a run immediately - and thus, not honouring neither
+              their agent run period nor the splaytime between nodes. This can be a problem on large installation where hundreds of nodes would start a
+              run concurrently, using a lot of CPU resources and network at the same time.
+            </p>
+            <p>
+              So by default, we advice to always limit the notification to a maximum number of nodes. Setting that number
+              to 0 has the same effect than disabling that hook.
+            </p>
+            <p>
+              You can also limit the number of notified nodes to a fraction of the total updated node so that you can
+              see on a small number of nodes if a change works. This is especially intereting if your schedule period is
+              big, like 30 min, which let you some time to revert a faulty change. Of course, that help does not replace
+              a real rollout strategy to deploy policies, and you should always test critical configuration changes on a
+              dedicated group of nodes before rolling out the change on other production nodes.
+            </p>
+            <p>
+              If the number of nodes given by the ratio is bigger than the maximun number of nodes configured in the previous
+              parameter, then the configured maximun number of node is used.
+            </p>
+            <p>
+              Nodes are chosen at random, with the exception of the policy servers that will always be notified first.
+            </p>
+            <p>
+              Setting the ration is given in percent of node to update, rounded up, so that 1% of 10 nodes will be 1 node,
+              and 90% of 8 nodes will be all the 8 nodes. Setting that ration to 0 is the same than disabling that hook,
+              and setting it to 100
+            </p>
+            <p>
+              The notification use the "trigger remote agent run" feature and you will need to open network port accordingly to
+              that (<a href="https://docs.rudder.io/reference/current/installation/requirements.html#configure-the-network">see documentation</a>).
+            </p>
+          </div>
+          <div id="generationHookTriggerNodeUpdateForm">
+          <form class="lift:form.ajax">
+            <ul>
+              <li class="rudder-form">
+                <div class="input-group">
+                  <label class="input-group-addon" for="generationHookTriggerNodeUpdateCheckbox">
+                    <input id="generationHookTriggerNodeUpdateCheckbox" type="checkbox">
+                    <label for="generationHookTriggerNodeUpdateCheckbox" class="label-radio">
+                      <span class="ion ion-checkmark-round"></span>
+                    </label>
+                    <span class="ion ion-checkmark-round check-icon"></span>
+                  </label>
+                  <label class="form-control" for="generationHookTriggerNodeUpdateCheckbox">
+                    Notify immediately nodes whose configuration changed
+                  </label>
+                </div>
+              </li>
+            </ul>
+            <div class="form-group">
+              <label>Maximun number of node to notify:</label>
+              <input id="generationHookTriggerNodeUpdateMaxNode" type="number" min="0"/>
+            </div>
+            <div class="form-group">
+              <label>Percentage of modified node to notify (rounded up):</label>
+              <input id="generationHookTriggerNodeUpdateRatio" type="number" min="0" max="100" step="1"/>
+            </div>
+            <lift:authz role="administration_write">
+              <input type="submit" value="Reload" id="generationHookTriggerNodeUpdateSubmit"/>
+              <span class="lift:Msg?id=generationHookTriggerNodeUpdateMsg">[messages]</span>
+            </lift:authz>
+          </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="inner-portlet">
       <h3 class="page-title">Usage survey participation</h3>
       <div class="portlet-content">
         <div class="lift:administration.PropertiesManagement.sendMetricsConfiguration" id="sendMetrics">
