--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
@@ -45,6 +45,7 @@
 
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/utils/diff.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/utils/json2.js"></script>
+    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/utils/clipboard.min.js"></script>
 
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/rudder.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/rudder-datatable.js"></script>
