Fixes #14647: Add a Button to trigger an agent run through the UI

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/reports_server.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/reports_server.html
@@ -1,4 +1,6 @@
 <batches-list>
+
+  <runAgent></runAgent>
   <lastreportgrid-intro></lastreportgrid-intro>
 
   <lastreportgrid-grid></lastreportgrid-grid>
